styles.css
/*General Styles*/
body{
    font-family: 'Lato', sans-serif;

    background-color: whitesmoke;
}
.container {
    margin-top: 1px;
    width: 90%;
}
ul,ol{
 list-style: none;
}
h1 {
 background-color: black;
 color: skyblue;
 text-align: center;
 font-weight: 700;

 margin-bottom: 0px;

 padding-bottom: 10px;
 padding-top: 10px;
}
button:focus {
    outline:none;
 } 
/*Styles from uv type*/
.uv {
    padding-left: 3px;
    padding-right: 3px;
    color: white;
}
.uv-low{
    background-color: green;
}
.uv-med{
    background-color: orange;
}
.uv-high{
    background-color: red;
}
/*Styles for sections*/
#search-column {
 
    margin-right: 30px;
    padding: 10px;
}
/* styles for 5day cards*/
.five-card {
    background-color: rgb(57, 124, 201);
    color: white;
    width: 150px;
    position: relative;
    left:20px;
    margin-right: 10px;
}
.five-card div p {
    font-size: small;
}
/*Styles for search form*/
#search-button {
    margin-left: 0px;

    background-color: skyblue;


}
/*Styles for search list*/
#search-list{
    margin-top: 10px;
    margin-bottom: 0px;

    padding-left: 0px;  
   
}
#search-list li button {
    width: 100%;
    height: 40px;
    font-size: 20px;

    border-top-width: 0.5px;
    border-bottom-width: 0.5px;
    border-left-width:1px ;
    border-right-width:1px ;

    border-color: black;

    background-color: white;
}
#search-list li button:hover {
    color:white;
    background-color: gray;
}
#details-column{
    padding-left: 0px;
    margin-bottom: 50px;
    margin-top: 20px;
}

